--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-opencv-python==4.10.0.84
-numpy==1.26.4
+jupyter==1.0.0
 matplotlib==3.9.0
 onnxruntime==1.18.0
-cmake==3.30.0
 scikit-learn==1.5.1
-gast==0.5.5
 tensorflow==2.16.2
